--- a/calendar/index.html
+++ b/calendar/index.html
@@ -9,12 +9,40 @@
  <body>
     <div class="hero">
         <div class="calendar">
-            <div class="left"></div>
-            <div class="right"></div>
+            <div class="left">
+                <p id="date">01</p>
+                <p id="day">Sunday</p>
+            </div>
+            <div class="right">
+                <p id="month">January</p>
+                <p id="year">2020</p>
+            </div>
 
         </div>
 
     </div>
+    <script>
+
+        const date = document.getElementById("date");
+        const day = document.getElementById("day");
+        const month = document.getElementById("month");
+        const year = document.getElementById("year");
+
+        const today = new Date();
+
+        const weekDays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+        const allMonths = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+
+
+        console.log(today);
+
+        date.innerHTML = (today.getDate() < 10 ? "0" : "") + today.getDate();
+        day.innerHTML = weekDays[today.getDay()];
+        month.innerHTML = allMonths[today.getMonth()];
+        year.innerHTML = today.getFullYear();
+
+
+    </script>
     
  </body>
  </html>
