--- a/notification_css/index.html
+++ b/notification_css/index.html
@@ -9,10 +9,12 @@
 <body>
 
     <div class="buttons">
-        <button>Success</button>
-        <button>Error</button>
-        <button>Invalid</button>
+        <button onclick="showToast()">Success</button>
+        <button onclick="showToast()">Error</button>
+        <button onclick="showToast()">Invalid</button>
     </div>
+
+    <div id="toastBox"></div>
     
 </body>
 </html>
